--- a/config.json
+++ b/config.json
@@ -1,28 +1,28 @@
 {
-    "ownerNumber": "6283834558105@s.whatsapp.net", 
-    "ownerName": "Lexxy Official", 
-    "botName": "NEOBOT-STORE",
-    "footer": "© BOTMD | 2022", 
+    "ownerNumber": "6282244877433@s.whatsapp.net", 
+    "ownerName": "𝒜𝒹𝒾𝓉𝓎𝒶 ℛℯ𝒻𝒶𝓃𝒹𝒾", 
+    "botName": "𝙳𝚒𝚝´𝚣 𝙱𝚘𝚝",
+    "footer": "©𝒜𝒹𝒾𝓉𝓎𝒶 | 2022", 
     "sessionName": "session", 
-    "pathimg": "./media/logo.jpg", 
-    "pathqris": "./media/qris.jpg",
-    "group": "https://chat.whatsapp.com/DHf4mb8QnmC5zynElmG2tG",
-    "yootube": "https://youtube.com/channel/UCLd-bhT8Dqq9PjGc6bWUVyg",
+    "pathimg": "./media/logo.jpg",
+    "pathqris": "./media/logo.jpg",
+    "group": "https://chat.whatsapp.com/KosmbTPMlB2DvXh1R93ns0",
+    "yootube": "https://youtube.com/channel/UC4c3unHcqGs4PJ5m24Q0YsQ",
      
     "QrisAllPay": "https://telegra.ph/file/d015def9028eb1c0a156b.jpg",
-    "textBarisDonate1": "Dana : 0857-8900-4732",
-    "textBarisDonate2": "Ovo : 0857-8900-4732",
-    "textBarisDonate3": "Gopay : 08xxxxxxxxx",
-    "textBarisDonate4": "Pulsa : 0857-8900-4732",
+    "textBarisDonate1": "Dana : 6282244877433",
+    "textBarisDonate2": "Ovo : 𝗚𝗮𝗸 𝗽𝘂𝗻𝘆𝗮",
+    "textBarisDonate3": "Gopay : 𝗚𝗮𝗸 𝗽𝘂𝗻𝘆𝗮",
+    "textBarisDonate4": "Pulsa : 6282244877433",
   
     "ButtonTextMenu1": "Youtube",
-    "ButtonTextMenu2": "Rest Api",
+    "ButtonTextMenu2": "Group chat",
     "quickReplyButton3": "Rules",
     "quickReplyButton4": "Donasi",
     "quickReplyButton5": "Dashboard",
   
     "ButtonMenuLink1": "https://youtube.com/channel/UCLd-bhT8Dqq9PjGc6bWUVyg",
-    "ButtonMenuLink2": "https://api-lexxy-official.herokuapp.com",
+    "ButtonMenuLink2": "https://chat.whatsapp.com/KosmbTPMlB2DvXh1R93ns0",
     "displayTextMenu3": "rules",
     "displayTextMenu4": "donasi",
     "displayTextMenu5": "dashboard",
@@ -30,7 +30,7 @@
     "limitGame": 35,
     "gamewaktu": 90,
     "sticker": {
-        "packname": "© Store",
-        "author": "Lexxy Official"
+        "packname": "made by ditz bot⊙",
+        "author": "©𝒜𝒹𝒾𝓉𝓎𝒶"
     }
 }
